ensure sequences are aligned in browser

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -98,6 +98,10 @@ canvas {
     text-align: left;
 }
 
+.sequence-viewer .sequence, .sequence-viewer .ref-coords {
+    padding-left: 5px;
+}
+
 .nostretch {
     width:1%;
     white-space:nowrap;
